--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.application.name=backend
 spring.jpa.open-in-view=false
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:canildb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.url=jdbc:postgresql://<dpg-d1jksba4d50c73854ss0-a>:<5432>/<petfamily_db>
+spring.datasource.username=<petfamily_db_user>
+spring.datasource.password=<ZZjD0Hukugyf3tSVMaeqOwPbQOz3BPNk>
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
