--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=backend
 spring.jpa.open-in-view=false
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
 
-spring.datasource.url=jdbc:postgresql://<dpg-d1jksba4d50c73854ss0-a>:<5432>/<petfamily_db>
-spring.datasource.username=<petfamily_db_user>
-spring.datasource.password=<ZZjD0Hukugyf3tSVMaeqOwPbQOz3BPNk>
+# Configurações do PostgreSQL usando variáveis de ambiente
+# O Spring Boot é inteligente o suficiente para usar DATABASE_URL se ela existir.
+# Se DATABASE_URL não funcionar, ou se quiser ser explícito:
+spring.datasource.url=${DATABASE_URL}
+# OU
+# spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+# spring.datasource.username=${PGUSER}
+# spring.datasource.password=${PGPASSWORD}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
