Aplicação do frontend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 cors.allowed.origins=http://localhost:3000,http://localhost:4200,http://localhost:5173,http://localhost:5174,http://localhost:5175,https://www.meu-frontend.com
+logging.level.org.springframework.web.cors=DEBUG
