--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/canil_db
 spring.datasource.username=postgres
 spring.datasource.password=docker
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
