--- a/backend/src/main/resources/application-railway.properties
+++ b/backend/src/main/resources/application-railway.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=postgres
-spring.datasource.password=${PGPASSWORD}
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=validate
 server.port=${PORT}
 cors.allowed.origins=petfamily-production-beda.up.railway.app
