--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,5 +1,6 @@
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/canil_db
 spring.datasource.username=postgres
 spring.datasource.password=docker
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+cors.allowed.origins=http://localhost:3000,http://localhost:4200,http://localhost:5173,http://localhost:5174,http://localhost:5175
