--- a/backend/src/main/resources/application-railway.properties
+++ b/backend/src/main/resources/application-railway.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 server.port=${PORT}
 cors.allowed.origins=petfamily-production-beda.up.railway.app
