application-railway.properties implementado

--- a/backend/src/main/resources/application-railway.properties
+++ b/backend/src/main/resources/application-railway.properties
@@ -3,4 +3,4 @@ spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.jpa.hibernate.ddl-auto=validate
 server.port=${PORT}
-cors.allowed.origins=https://petfamily-production-4ca8.up.railway.app
+cors.allowed.origins=https://pet-family-4ps5uzmex-rafael-do-nascimento-sousas-projects.vercel.app
