application-railway.properties implementado

--- a/backend/src/main/resources/application-railway.properties
+++ b/backend/src/main/resources/application-railway.properties
@@ -3,4 +3,5 @@ spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.jpa.hibernate.ddl-auto=validate
 server.port=${PORT}
-cors.allowed.origins=https://*.vercel.app
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+cors.allowed.origins=https://pet-family-omega.vercel.app,https://pet-family-omega-*-rafael-do-nascimento-sousas-projects.vercel.app
