--- a/backend/src/main/resources/application-railway.properties
+++ b/backend/src/main/resources/application-railway.properties
@@ -3,5 +3,4 @@ spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.jpa.hibernate.ddl-auto=validate
 server.port=${PORT}
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-cors.allowed.origins=https://pet-family-omega.vercel.app,https://pet-family-omega-*-rafael-do-nascimento-sousas-projects.vercel.app
+cors.allowed.origins=https://*.vercel.app
