application-railway.properties implementado

--- a/backend/src/main/resources/application-railway.properties
+++ b/backend/src/main/resources/application-railway.properties
@@ -3,4 +3,7 @@ spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 server.port=${PORT}
-cors.allowed.origins=https://*.vercel.app
+cors.allowed.origins=*
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.com.zaxxer.hikari=DEBUG
